parser/JavaScriptParser.js
"use strict";

Object.defineProperty(exports, "__esModule", {
  value: true
});
exports.default = void 0;
var _antlr = _interopRequireDefault(require("antlr4"));
var _JavaScriptParserListener = _interopRequireDefault(require("./JavaScriptParserListener.js"));
var _JavaScriptParserVisitor = _interopRequireDefault(require("./JavaScriptParserVisitor.js"));
var _JavaScriptParserBase = _interopRequireDefault(require("./JavaScriptParserBase.js"));
function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }
// Generated from java-escape by ANTLR 4.11.1
// jshint ignore: start

const atn = new _antlr.default.atn.ATNDeserializer().deserialize(serializedATN);
const decisionsToDFA = atn.decisionToState.map((ds, index) => new _antlr.default.dfa.DFA(ds, index));
const sharedContextCache = new _antlr.default.PredictionContextCache();
class JavaScriptParser extends _JavaScriptParserBase.default {
  static grammarFileName = "java-escape";
  static literalNames = [null, null, null, "'['", "']'", "'('", "')'", "'{'", null, "'}'", "';'", "','", "'='", "'?'", "'?.'", "':'", "'...'", "'.'", "'++'", "'--'", "'+'", "'-'", "'~'", "'!'", "'*'", "'/'", "'%'", "'**'", "'??'", "'#'", "'>>'", "'<<'", "'>>>'", "'<'", "'>'", "'<='", "'>='", "'=='", "'!='", "'==='", "'!=='", "'&'", "'^'", "'|'", "'&&'", "'||'", "'*='", "'/='", "'%='", "'+='", "'-='", "'<<='", "'>>='", "'>>>='", "'&='", "'^='", "'|='", "'**='", "'=>'", "'null'", null, null, null, null, null, null, null, null, null, null, "'break'", "'do'", "'instanceof'", "'typeof'", "'case'", "'else'", "'new'", "'var'", "'catch'", "'finally'", "'return'", "'void'", "'continue'", "'for'", "'switch'", "'while'", "'debugger'", "'function'", "'this'", "'with'", "'default'", "'if'", "'throw'", "'delete'", "'in'", "'try'", "'as'", "'from'", "'class'", "'enum'", "'extends'", "'super'", "'const'", "'export'", "'import'", "'async'", "'await'", "'yield'", "'implements'", null, null, "'private'", "'public'", "'interface'", "'package'", "'protected'", "'static'", null, null, null, null, null, null, null, null, "'${'"];
  static symbolicNames = [null, "MultiLineComment", "SingleLineComment", "OpenBracket", "CloseBracket", "OpenParen", "CloseParen", "OpenBrace", "TemplateCloseBrace", "CloseBrace", "SemiColon", "Comma", "Assign", "QuestionMark", "QuestionMarkDot", "Colon", "Ellipsis", "Dot", "PlusPlus", "MinusMinus", "Plus", "Minus", "BitNot", "Not", "Multiply", "Divide", "Modulus", "Power", "NullCoalesce", "Hashtag", "RightShiftArithmetic", "LeftShiftArithmetic", "RightShiftLogical", "LessThan", "MoreThan", "LessThanEquals", "GreaterThanEquals", "Equals_", "NotEquals", "IdentityEquals", "IdentityNotEquals", "BitAnd", "BitXOr", "BitOr", "And", "Or", "MultiplyAssign", "DivideAssign", "ModulusAssign", "PlusAssign", "MinusAssign", "LeftShiftArithmeticAssign", "RightShiftArithmeticAssign", "RightShiftLogicalAssign", "BitAndAssign", "BitXorAssign", "BitOrAssign", "PowerAssign", "ARROW", "NullLiteral", "BooleanLiteral", "DecimalLiteral", "HexIntegerLiteral", "OctalIntegerLiteral", "OctalIntegerLiteral2", "BinaryIntegerLiteral", "BigHexIntegerLiteral", "BigOctalIntegerLiteral", "BigBinaryIntegerLiteral", "BigDecimalIntegerLiteral", "Break", "Do", "Instanceof", "Typeof", "Case", "Else", "New", "Var", "Catch", "Finally", "Return", "Void", "Continue", "For", "Switch", "While", "Debugger", "FunctionObject", "This", "With", "Default", "If", "Throw", "Delete", "In", "Try", "As", "From", "Class", "Enum", "Extends", "Super", "Const", "Export", "Import", "Async", "Await", "Yield", "Implements", "StrictLet", "NonStrictLet", "Private", "Public", "Interface", "Package", "Protected", "Static", "Identifier", "StringLiteral", "BackTick", "WhiteSpaces", "LineTerminator", "HtmlComment", "CDataComment", "UnexpectedCharacter", "TemplateStringStartExpression", "TemplateStringAtom"];
  static ruleNames = ["program", "sourceElement", "statement", "block", "statementList", "importStatement", "importFromBlock", "moduleItems", "importDefault", "importNamespace", "importFrom", "aliasName", "exportStatement", "exportFromBlock", "declaration", "variableStatement", "variableDeclarationList", "variableDeclaration", "emptyStatement_", "expressionStatement", "ifStatement", "iterationStatement", "varModifier", "continueStatement", "breakStatement", "returnStatement", "yieldStatement", "withStatement", "switchStatement", "caseBlock", "caseClauses", "caseClause", "defaultClause", "labelledStatement", "throwStatement", "tryStatement", "catchProduction", "finallyProduction", "debuggerStatement", "functionDeclaration", "classDeclaration", "classTail", "classElement", "methodDefinition", "formalParameterList", "formalParameterArg", "lastFormalParameterArg", "functionBody", "sourceElements", "arrayLiteral", "elementList", "arrayElement", "propertyAssignment", "propertyName", "arguments", "argument", "expressionSequence", "singleExpression", "assignable", "objectLiteral", "anonymousFunction", "arrowFunctionParameters", "arrowFunctionBody", "assignmentOperator", "literal", "templateStringLiteral", "templateStringAtom", "numericLiteral", "bigintLiteral", "getter", "setter", "identifierName", "identifier", "reservedWord", "keyword", "let_", "eos"];
  constructor(input) {
    super(input);
    this._interp = new _antlr.default.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = JavaScriptParser.ruleNames;
    this.literalNames = JavaScriptParser.literalNames;
    this.symbolicNames = JavaScriptParser.symbolicNames;
  }
  get atn() {
    return atn;
  }
  sempred(localctx, ruleIndex, predIndex) {
    switch (ruleIndex) {
      case 19:
        return this.expressionStatement_sempred(localctx, predIndex);
      case 21:
        return this.iterationStatement_sempred(localctx, predIndex);
      case 23:
        return this.continueStatement_sempred(localctx, predIndex);
      case 24:
        return this.breakStatement_sempred(localctx, predIndex);
      case 25:
        return this.returnStatement_sempred(localctx, predIndex);
      case 26:
        return this.yieldStatement_sempred(localctx, predIndex);
      case 34:
        return this.throwStatement_sempred(localctx, predIndex);
      case 42:
        return this.classElement_sempred(localctx, predIndex);
      case 57:
        return this.singleExpression_sempred(localctx, predIndex);
      case 69:
        return this.getter_sempred(localctx, predIndex);
      case 70:
        return this.setter_sempred(localctx, predIndex);
      case 76:
        return this.eos_sempred(localctx, predIndex);
      default:
        throw "No predicate with index:" + ruleIndex;
    }
  }
  expressionStatement_sempred(localctx, predIndex) {
    switch (predIndex) {
      case 0:
        return this.notOpenBraceAndNotFunction();
      default:
        throw "No predicate with index:" + predIndex;
    }
  }
  iterationStatement_sempred(localctx, predIndex) {
    switch (predIndex) {
      case 1:
        return this.p("of");
      default:
        throw "No predicate with index:" + predIndex;
    }
  }
  continueStatement_sempred(localctx, predIndex) {
    switch (predIndex) {
      case 2:
        return this.notLineTerminator();
      default:
        throw "No predicate with index:" + predIndex;
    }
  }
  breakStatement_sempred(localctx, predIndex) {
    switch (predIndex) {
      case 3:
        return this.notLineTerminator();
      default:
        throw "No predicate with index:" + predIndex;
    }
  }
  returnStatement_sempred(localctx, predIndex) {
    switch (predIndex) {
      case 4:
        return this.notLineTerminator();
      default:
        throw "No predicate with index:" + predIndex;
    }
  }
  yieldStatement_sempred(localctx, predIndex) {
    switch (predIndex) {
      case 5:
        return this.notLineTerminator();
      default:
        throw "No predicate with index:" + predIndex;
    }
  }
  throwStatement_sempred(localctx, predIndex) {
    switch (predIndex) {
      case 6:
        return this.notLineTerminator();
      default:
        throw "No predicate with index:" + predIndex;
    }
  }
  classElement_sempred(localctx, predIndex) {
    switch (predIndex) {
      case 7:
        return this.n("static");
      default:
        throw "No predicate with index:" + predIndex;
    }
  }
  singleExpression_sempred(localctx, predIndex) {
    switch (predIndex) {
      case 8:
        return this.precpred(this._ctx, 46);
      case 9:
        return this.precpred(this._ctx, 27);
      case 10:
        return this.precpred(this._ctx, 26);
      case 11:
        return this.precpred(this._ctx, 25);
      case 12:
        return this.precpred(this._ctx, 24);
      case 13:
        return this.precpred(this._ctx, 23);
      case 14:
        return this.precpred(this._ctx, 22);
      case 15:
        return this.precpred(this._ctx, 21);
      case 16:
        return this.precpred(this._ctx, 20);
      case 17:
        return this.precpred(this._ctx, 19);
      case 18:
        return this.precpred(this._ctx, 18);
      case 19:
        return this.precpred(this._ctx, 17);
      case 20:
        return this.precpred(this._ctx, 16);
      case 21:
        return this.precpred(this._ctx, 15);
      case 22:
        return this.precpred(this._ctx, 14);
      case 23:
        return this.precpred(this._ctx, 13);
      case 24:
        return this.precpred(this._ctx, 12);
      case 25:
        return this.precpred(this._ctx, 11);
      case 26:
        return this.precpred(this._ctx, 45);
      case 27:
        return this.precpred(this._ctx, 44);
      case 28:
        return this.precpred(this._ctx, 41);
      case 29:
        return this.precpred(this._ctx, 39);
      case 30:
        return this.notLineTerminator();
      case 31:
        return this.precpred(this._ctx, 38);
      case 32:
        return this.notLineTerminator();
      case 33:
        return this.precpred(this._ctx, 9);
      default:
        throw "No predicate with index:" + predIndex;
    }
  }
  getter_sempred(localctx, predIndex) {
    switch (predIndex) {
      case 34:
        return this.n("get");
      default:
        throw "No predicate with index:" + predIndex;
    }
  }
  setter_sempred(localctx, predIndex) {
    switch (predIndex) {
      case 35:
        return this.n("set");
      default:
        throw "No predicate with index:" + predIndex;
    }
  }
  eos_sempred(localctx, predIndex) {
    switch (predIndex) {
      case 36:
        return this.lineTerminatorAhead();
      case 37:
        return this.closeBrace();
      default:
        throw "No predicate with index:" + predIndex;
    }
  }
  program() {
    let localctx = new ProgramContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, JavaScriptParser.RULE_program);
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 155;
      this._errHandler.sync(this);
      var la_ = this._interp.adaptivePredict(this._input, 0, this._ctx);
      if (la_ === 1) {
        this.state = 154;
        this.sourceElements();
      }
      this.state = 157;
      this.match(JavaScriptParser.EOF);
    } catch (re) {
      if (re instanceof _antlr.default.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  sourceElement() {
    let localctx = new SourceElementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, JavaScriptParser.RULE_sourceElement);
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 159;
      this.statement();
    } catch (re) {
      if (re instanceof _antlr.default.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  statement() {
    let localctx = new StatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, JavaScriptParser.RULE_statement);
    try {
      this.state = 181;
      this._errHandler.sync(this);
      var la_ = this._interp.adaptivePredict(this._input, 1, this._ctx);
      switch (la_) {
        case 1:
          this.enterOuterAlt(localctx, 1);
          this.state = 161;
          this.block();
          break;
        case 2:
          this.enterOuterAlt(localctx, 2);
          this.state = 162;
          this.variableStatement();
          break;
        case 3:
          this.enterOuterAlt(localctx, 3);
          this.state = 163;
          this.importStatement();
          break;
        case 4:
          this.enterOuterAlt(localctx, 4);
          this.state = 164;
          this.exportStatement();
          break;
        case 5:
          this.enterOuterAlt(localctx, 5);
          this.state = 165;
          this.emptyStatement_();
          break;
        case 6:
          this.enterOuterAlt(localctx, 6);
          this.state = 166;
          this.classDeclaration();
          break;
        case 7:
          this.enterOuterAlt(localctx, 7);
          this.state = 167;
          this.expressionStatement();
          break;
        case 8:
          this.enterOuterAlt(localctx, 8);
          this.state = 168;
          this.ifStatement();
          break;
        case 9:
          this.enterOuterAlt(localctx, 9);
          this.state = 169;
          this.iterationStatement();
          break;
        case 10:
          this.enterOuterAlt(localctx, 10);
          this.state = 170;
          this.continueStatement();
          break;
        case 11:
          this.enterOuterAlt(localctx, 11);
          this.state = 171;
          this.breakStatement();
          break;
        case 12:
          this.enterOuterAlt(localctx, 12);
          this.state = 172;
          this.returnStatement();
          break;
        case 13:
          this.enterOuterAlt(localctx, 13);
          this.state = 173;
          this.yieldStatement();
          break;
        case 14:
          this.enterOuterAlt(localctx, 14);
          this.state = 174;
          this.withStatement();
          break;
        case 15:
          this.enterOuterAlt(localctx, 15);
          this.state = 175;
          this.labelledStatement();
          break;
        case 16:
          this.enterOuterAlt(localctx, 16);
          this.state = 176;
          this.switchStatement();
          break;
        case 17:
          this.enterOuterAlt(localctx, 17);
          this.state = 177;
          this.throwStatement();
          break;
        case 18:
          this.enterOuterAlt(localctx, 18);
          this.state = 178;
          this.tryStatement();
          break;
        case 19:
          this.enterOuterAlt(localctx, 19);
          this.state = 179;
          this.debuggerStatement();
          break;
        case 20:
          this.enterOuterAlt(localctx, 20);
          this.state = 180;
          this.functionDeclaration();
          break;
      }
    } catch (re) {
      if (re instanceof _antlr.default.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  block() {
    let localctx = new BlockContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, JavaScriptParser.RULE_block);
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 183;
      this.match(JavaScriptParser.OpenBrace);
      this.state = 185;
      this._errHandler.sync(this);
      var la_ = this._interp.adaptivePredict(this._input, 2, this._ctx);
      if (la_ === 1) {
        this.state = 184;
        this.statementList();
      }
      this.state = 187;
      this.match(JavaScriptParser.CloseBrace);
    } catch (re) {
      if (re instanceof _antlr.default.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  statementList() {
    let localctx = new StatementListContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, JavaScriptParser.RULE_statementList);
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 190;
      this._errHandler.sync(this);
      var _alt = 1;
      do {
        switch (_alt) {
          case 1:
            this.state = 189;
            this.statement();
            break;
          default:
            throw new _antlr.default.error.NoViableAltException(this);
        }
        this.state = 192;
        this._errHandler.sync(this);
        _alt = this._interp.adaptivePredict(this._input, 3, this._ctx);
      } while (_alt != 2 && _alt != _antlr.default.atn.ATN.INVALID_ALT_NUMBER);
    } catch (re) {
      if (re instanceof _antlr.default.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  importStatement() {
    let localctx = new ImportStatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, JavaScriptParser.RULE_importStatement);
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 194;
      this.match(JavaScriptParser.Import);
      this.state = 195;
      this.importFromBlock();
    } catch (re) {
      if (re instanceof _antlr.default.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  importFromBlock() {
    let localctx = new ImportFromBlockContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, JavaScriptParser.RULE_importFromBlock);
    try {
      this.state = 209;
      this._errHandler.sync(this);
      switch (this._input.LA(1)) {
        case 7:
        case 24:
        case 59:
        case 60:
        case 70:
        case 71:
        case 72:
        case 73:
        case 74:
        case 75:
        case 76:
        case 77:
        case 78:
        case 79:
        case 80:
        case 81:
        case 82:
        case 83:
        case 84:
        case 85:
        case 86:
        case 87:
        case 88:
        case 89:
        case 90:
        case 91:
        case 92:
        case 93:
        case 94:
        case 95:
        case 96:
        case 97:
        case 98:
        case 99:
        case 100:
        case 101:
        case 102:
        case 103:
        case 104:
        case 105:
        case 106:
        case 107:
        case 108:
        case 109:
        case 110:
        case 111:
        case 112:
        case 113:
        case 114:
        case 115:
        case 116:
        case 117:
          this.enterOuterAlt(localctx, 1);
          this.state = 198;
          this._errHandler.sync(this);
          var la_ = this._interp.adaptivePredict(this._input, 4, this._ctx);
          if (la_ === 1) {
            this.state = 197;
            this.importDefault();
          }
          this.state = 202;
          this._errHandler.sync(this);
          switch (this._input.LA(1)) {
            case 24:
            case 59:
            case 60:
            case 70:
            case 71:
            case 72:
            case 73:
            case 74:
            case 75:
            case 76:
            case 77:
            case 78:
            case 79:
            case 80:
            case 81:
            case 82:
            case 83:
            case 84:
            case 85:
            case 86:
            case 87:
            case 88:
            case 89:
            case 90:
            case 91:
            case 92:
            case 93:
            case 94:
            case 95:
            case 96:
            case 97:
            case 98:
            case 99:
            case 100:
            case 101:
            case 102:
            case 103:
            case 104:
            case 105:
            case 106:
            case 107:
            case 108:
            case 109:
            case 110:
            case 111:
            case 112:
            case 113:
            case 114:
            case 115:
            case 116:
            case 117:
              this.state = 200;
              this.importNamespace();
              break;
            case 7:
              this.state = 201;
              this.moduleItems();
              break;
            default:
              throw new _antlr.default.error.NoViableAltException(this);
          }
          this.state = 204;
          this.importFrom();
          this.state = 205;
          this.eos();
          break;
        case 118:
          this.enterOuterAlt(localctx, 2);
          this.state = 207;
          this.match(JavaScriptParser.StringLiteral);
          this.state = 208;
          this.eos();
          break;
        default:
          throw new _antlr.default.error.NoViableAltException(this);
      }
    } catch (re) {
      if (re instanceof _antlr.default.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  moduleItems() {
    let localctx = new ModuleItemsContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, JavaScriptParser.RULE_moduleItems);
    var _la = 0; // Token type
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 211;
      this.match(JavaScriptParser.OpenBrace);
      this.state = 217;
      this._errHandler.sync(this);
      var _alt = this._interp.adaptivePredict(this._input, 7, this._ctx);
      while (_alt != 2 && _alt != _antlr.default.atn.ATN.INVALID_ALT_NUMBER) {
        if (_alt === 1) {
          this.state = 212;
          this.aliasName();
          this.state = 213;
          this.match(JavaScriptParser.Comma);
        }
        this.state = 219;
        this._errHandler.sync(this);
        _alt = this._interp.adaptivePredict(this._input, 7, this._ctx);
      }
      this.state = 224;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
      if ((_la - 59 & ~0x1f) == 0 && (1 << _la - 59 & 4294965251) !== 0 || (_la - 91 & ~0x1f) == 0 && (1 << _la - 91 & 134217727) !== 0) {
        this.state = 220;
        this.aliasName();
        this.state = 222;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if (_la === 11) {
          this.state = 221;
          this.match(JavaScriptParser.Comma);
        }
      }
      this.state = 226;
      this.match(JavaScriptParser.CloseBrace);
    } catch (re) {
      if (re instanceof _antlr.default.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  importDefault() {
    let localctx = new ImportDefaultContext(this, this._ctx, this.state);
    this.enterRule(localctx, 16, JavaScriptParser.RULE_importDefault);
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 228;
      this.aliasName();
      this.state = 229;
      this.match(JavaScriptParser.Comma);
    } catch (re) {
      if (re instanceof _antlr.default.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  importNamespace() {
    let localctx = new ImportNamespaceContext(this, this._ctx, this.state);
    this.enterRule(localctx, 18, JavaScriptParser.RULE_importNamespace);
    var _la = 0; // Token type
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 233;
      this._errHandler.sync(this);
      switch (this._input.LA(1)) {
        case 24:
          this.state = 231;
          this.match(JavaScriptParser.Multiply);
          break;
        case 59:
        case 60:
        case 70:
        case 71:
